--- a/app/src/main/res/layout/lab11.xml
+++ b/app/src/main/res/layout/lab11.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tddc73.lab1.MainActivity">
+    tools:context="com.tddc73.lab1.lab11">
 
     <LinearLayout
         android:layout_width="fill_parent"
