Finish lab1.3 and thereby finish lab 1

--- a/app/src/main/res/layout/lab13.xml
+++ b/app/src/main/res/layout/lab13.xml
@@ -74,7 +74,7 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="200px"
             app:srcCompat="@mipmap/ic_launcher_round" />
     </FrameLayout>
 
