--- a/app/src/main/res/layout/expandable_list_item.xml
+++ b/app/src/main/res/layout/expandable_list_item.xml
@@ -7,5 +7,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp" />
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"/>
 </LinearLayout>
