Finish stringmatching and fetching parents and children

--- a/app/src/main/res/layout/expandable_list_group.xml
+++ b/app/src/main/res/layout/expandable_list_group.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"/>
+        android:paddingBottom="10dp"
+        />
 
 </LinearLayout>
