--- a/app/src/main/res/layout/lab2.xml
+++ b/app/src/main/res/layout/lab2.xml
@@ -7,8 +7,8 @@
     tools:context="com.tddc73.lab1.lab2">
 
     <LinearLayout
-        android:layout_width="395dp"
-        android:layout_height="587dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:hint="Path" />
 
         <ExpandableListView
             android:id="@+id/expandList"
