Add implementation of PasswordStrengthMeter component

--- a/app/src/main/res/layout/account_registration_password_strength.xml
+++ b/app/src/main/res/layout/account_registration_password_strength.xml
@@ -1,38 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tddc73.lab1.Project">
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword" />
 
-        <EditText
-            android:id="@+id/editTextPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPassword" />
+    <ProgressBar
+        android:id="@+id/passwordStrength"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:progress="0"
+        android:progressTint="@android:color/holo_red_light" />
 
-        <ProgressBar
-            android:id="@+id/passwordStrength"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:progress="10"
-            android:padding="5dp"
-
-            android:progressTint="@android:color/holo_red_light"/>
-
-        <TextView
-            android:id="@+id/passwordStrengthText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
-            android:text="Weak" />
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/passwordStrengthText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:text=""
+        android:textStyle="bold"/>
+</LinearLayout>
